Wired up Blazor client to server.

--- a/BlazorCS1.Client/wwwroot/index.html
+++ b/BlazorCS1.Client/wwwroot/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>MfePoc.BlazorCS1</title>
-    <base href="/" />
+    <base href="/BlazorCS1/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="MfePoc.BlazorCS1.styles.css" rel="stylesheet" />
+    <link href="MfePoc.BlazorCS1.Client.styles.css" rel="stylesheet" />
 </head>
 
 <body>
